# Discord-public-projects

24-7-User-Online/: pyproject.toml
Arcade-Bot/: tetris_bot.py
Auto-Delete-Bot/: index.js  package-lock.json
Azkar-Bot/: data.json  index.js  package-lock.json  package.json
Quran-Bot/: index.js
Security-Bot/: antibots.json  antigreff.json  config.json  index,js  package.json  package.lock.json
Spam-User-Discord/: main.py  pyproject.toml
