[tool.poetry]
name = "repl_python3_Online-24x7"
version = "0.1.0"
description = ""
authors = ["Yousif <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
